--- a/MobileFactor/Base.lproj/Main.storyboard
+++ b/MobileFactor/Base.lproj/Main.storyboard
@@ -7,6 +7,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -26,33 +27,6 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="hid-EE-mcS">
-                                <rect key="frame" x="58" y="285" width="216" height="78"/>
-                                <subviews>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Email" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Df1-QN-lLR">
-                                        <rect key="frame" x="0.0" y="0.0" width="216" height="30"/>
-                                        <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="access" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pR3-bX-hTE">
-                                        <rect key="frame" x="0.0" y="30" width="216" height="48"/>
-                                        <accessibility key="accessibilityConfiguration" identifier="access"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                        <state key="normal" title="Log In">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="accessButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dJr-eW-ekz"/>
-                                            <segue destination="VnD-Bg-0fz" kind="show" identifier="access" id="0Jq-cI-9gO"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="Df1-QN-lLR" firstAttribute="width" relation="greaterThanOrEqual" secondItem="hid-EE-mcS" secondAttribute="height" constant="138" id="emJ-h6-xWY"/>
-                                </constraints>
-                            </stackView>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OAS-CR-8Ag">
                                 <rect key="frame" x="75" y="87" width="224" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="38"/>
@@ -81,13 +55,34 @@
                                     </button>
                                 </subviews>
                             </stackView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Email" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Df1-QN-lLR">
+                                <rect key="frame" x="104" y="318" width="168" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="access" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pR3-bX-hTE">
+                                <rect key="frame" x="160" y="435.5" width="55" height="36"/>
+                                <accessibility key="accessibilityConfiguration" identifier="access"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Log In">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="accessButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dJr-eW-ekz"/>
+                                    <segue destination="VnD-Bg-0fz" kind="show" identifier="access" id="0Jq-cI-9gO"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="hid-EE-mcS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9YV-tg-pyK"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="pR3-bX-hTE" secondAttribute="bottom" constant="195.5" id="AGJ-49-oqr"/>
                             <constraint firstItem="OAS-CR-8Ag" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="67" id="I0e-xv-N7a"/>
-                            <constraint firstItem="hid-EE-mcS" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-24" id="RWC-ar-25i"/>
+                            <constraint firstItem="Df1-QN-lLR" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="MA3-I7-O1F"/>
+                            <constraint firstItem="Df1-QN-lLR" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RSg-A8-D6Q"/>
                             <constraint firstItem="pZe-a2-KCH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Xoy-2B-nG7"/>
                             <constraint firstItem="OAS-CR-8Ag" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="eG3-z6-cIw"/>
+                            <constraint firstItem="pR3-bX-hTE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="prL-gU-6Ce"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="pZe-a2-KCH" secondAttribute="bottom" constant="20" id="yQ8-6i-CJT"/>
                         </constraints>
                     </view>
@@ -325,18 +320,27 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ic7-nk-jiq">
-                                            <rect key="frame" x="-30" y="-43" width="240" height="128"/>
+                                            <rect key="frame" x="-30" y="-43" width="103" height="128"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="boolean" keyPath="keyPath" value="YES"/>
+                                            </userDefinedRuntimeAttributes>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mFE-pP-Vdk">
-                                            <rect key="frame" x="218" y="11" width="42" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mFE-pP-Vdk">
+                                            <rect key="frame" x="81" y="8" width="286" height="32"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="topMargin" secondItem="mFE-pP-Vdk" secondAttribute="top" id="I7a-Qw-Ljm"/>
+                                        <constraint firstItem="mFE-pP-Vdk" firstAttribute="centerX" secondItem="Xld-QV-TXt" secondAttribute="centerX" constant="-85" id="T0N-43-u45"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="mFE-pP-Vdk" secondAttribute="bottom" constant="4" id="mje-Sd-VKy"/>
+                                </constraints>
                                 <connections>
                                     <outlet property="icon" destination="Ic7-nk-jiq" id="vKm-YQ-4of"/>
                                     <outlet property="serviceName" destination="mFE-pP-Vdk" id="MO1-hN-tWV"/>
@@ -346,13 +350,18 @@
                         </prototypes>
                         <connections>
                             <outlet property="dataSource" destination="A6q-Uk-Pt3" id="Oip-QZ-YLa"/>
-                            <outlet property="delegate" destination="A6q-Uk-Pt3" id="MSq-Ao-Tgl"/>
+                            <outlet property="delegate" destination="A6q-Uk-Pt3" id="zq9-B5-2sT"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Your Services:" id="9Lq-3C-m6Q">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="auV-zH-n3c">
+                    <navigationItem key="navigationItem" title="Your Services:" id="w7t-KL-EUF">
+                        <barButtonItem key="leftBarButtonItem" systemItem="camera" id="tYa-ML-u2Y">
                             <connections>
-                                <segue destination="Xw8-jr-ohL" kind="show" identifier="addItem" id="gha-eH-JYg"/>
+                                <segue destination="HOB-qO-hca" kind="show" id="Xg4-sy-xVO"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="X84-hC-TPD">
+                            <connections>
+                                <segue destination="Xw8-jr-ohL" kind="show" id="JHD-PS-0Hl"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -371,7 +380,7 @@
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="788" y="-1506"/>
+            <point key="canvasLocation" x="788" y="-1506.296851574213"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Nkm-S2-hQR">
@@ -414,17 +423,20 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="o5a-0R-QrA">
-                                            <rect key="frame" x="-30" y="-43" width="240" height="128"/>
+                                            <rect key="frame" x="-30" y="-43" width="101" height="128"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y4S-7s-ddb">
-                                            <rect key="frame" x="218" y="11" width="42" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y4S-7s-ddb">
+                                            <rect key="frame" x="79" y="14" width="288" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Y4S-7s-ddb" firstAttribute="top" secondItem="247-Wb-bUG" secondAttribute="topMargin" constant="6" id="M0w-wh-yfF"/>
+                                        <constraint firstItem="Y4S-7s-ddb" firstAttribute="centerX" secondItem="247-Wb-bUG" secondAttribute="centerX" id="i1j-eP-1fq"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="icon" destination="o5a-0R-QrA" id="emV-Wm-PJo"/>
@@ -465,7 +477,7 @@
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="2604" y="-1506"/>
+            <point key="canvasLocation" x="2604" y="-1506.296851574213"/>
         </scene>
         <!--Service DetailsVC-->
         <scene sceneID="Nbn-Xr-mbd">
@@ -594,14 +606,32 @@
             </objects>
             <point key="canvasLocation" x="1649" y="-1506"/>
         </scene>
+        <!--Service DetailsVC-->
+        <scene sceneID="skR-2T-Eo7">
+            <objects>
+                <viewController id="HOB-qO-hca" customClass="ServiceDetailsVC" customModule="MobileFactor" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="KnA-KM-MXL"/>
+                        <viewControllerLayoutGuide type="bottom" id="7iF-21-vNH"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="kJ8-Te-F6U">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vw2-p8-MR0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="788" y="-680"/>
+        </scene>
     </scenes>
     <resources>
         <image name="bg" width="1080" height="1920"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="W24-nl-4Au"/>
         <segue reference="8RP-a8-mPa"/>
-        <segue reference="eby-XJ-Hw5"/>
-        <segue reference="z7H-Fh-19n"/>
+        <segue reference="W24-nl-4Au"/>
+        <segue reference="vpM-4n-Ik6"/>
+        <segue reference="0Jq-cI-9gO"/>
     </inferredMetricsTieBreakers>
 </document>
