--- a/MobileFactor/Base.lproj/Main.storyboard
+++ b/MobileFactor/Base.lproj/Main.storyboard
@@ -438,16 +438,13 @@
                             <outlet property="delegate" destination="ub3-vV-xZh" id="yFb-xD-Utl"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Services:" id="od1-OK-Pbd">
-                        <barButtonItem key="leftBarButtonItem" style="plain" id="Iyz-li-Ohe">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Cse-el-nba">
+                    <navigationItem key="navigationItem" title="Services:" id="oWE-w0-3kY">
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="7yA-a9-YD5">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="8NZ-03-ro4">
                                 <rect key="frame" x="16" y="7" width="83" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Back"/>
                             </button>
-                            <connections>
-                                <segue destination="A6q-Uk-Pt3" kind="show" id="8RP-a8-mPa"/>
-                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
@@ -486,13 +483,13 @@
                                         <rect key="frame" x="0.0" y="0.0" width="173" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Domain" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oEH-nD-nqG">
-                                                <rect key="frame" x="0.0" y="0.0" width="58.5" height="30"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="59" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qaW-2c-jg7">
-                                                <rect key="frame" x="58.5" y="0.0" width="114.5" height="30"/>
+                                                <rect key="frame" x="59" y="0.0" width="114" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
@@ -503,13 +500,13 @@
                                         <rect key="frame" x="0.0" y="30" width="173" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2hV-sR-NT9">
-                                                <rect key="frame" x="0.0" y="0.0" width="83.5" height="30"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="84" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ahG-GO-AlP">
-                                                <rect key="frame" x="83.5" y="0.0" width="89.5" height="30"/>
+                                                <rect key="frame" x="84" y="0.0" width="89" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
@@ -599,9 +596,9 @@
         <image name="bg" width="1080" height="1920"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="W24-nl-4Au"/>
-        <segue reference="8RP-a8-mPa"/>
         <segue reference="eby-XJ-Hw5"/>
         <segue reference="z7H-Fh-19n"/>
+        <segue reference="hHU-I3-M2P"/>
+        <segue reference="W24-nl-4Au"/>
     </inferredMetricsTieBreakers>
 </document>
