--- a/MobileFactor/Base.lproj/Main.storyboard
+++ b/MobileFactor/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="93P-X1-Bxm">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -13,7 +13,7 @@
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="MobileFactor" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" id="BYZ-38-t0r" customClass="LoginViewController" customModule="MobileFactor" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -105,7 +105,7 @@
         <!--RegisterA View Control-->
         <scene sceneID="zMt-UQ-TrS">
             <objects>
-                <viewController id="opi-Mf-nkK" customClass="RegisterAViewControl" customModule="MobileFactor" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="RegisterAViewControl" id="opi-Mf-nkK" customClass="RegisterAViewControl" customModule="MobileFactor" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="7Cc-0V-odt"/>
                         <viewControllerLayoutGuide type="bottom" id="aVH-bf-UnG"/>
@@ -603,8 +603,8 @@
         <image name="bg" width="1080" height="1920"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="eby-XJ-Hw5"/>
-        <segue reference="PGj-mP-50E"/>
         <segue reference="iDS-co-tvc"/>
+        <segue reference="vpM-4n-Ik6"/>
+        <segue reference="PGj-mP-50E"/>
     </inferredMetricsTieBreakers>
 </document>
